          This means that the Bio::SearchIO->new() parameters '-signif', '-score',
          '-bits' and '-hit_filter' will now work with other Bio::SearchIO formats
          besides Blast, instead of being ignored. Added tests for all moved methods
          using HMMER outputs and run the full test suite and everything pass [fjossandon]

    [Bug fixes]

    * Blast: Added support to changes in bl2seq from BLAST+ output, which
      now uses "Subject=" instead of ">" to start hit lines [yschensandiego]
    * Phylip: Return undef in "next_aln" at file end to avoid
      an infinite loop [yschensandiego]
    * HMMER3: When a hit description is too long, it is truncated in
      the Scores table. In those cases, the more complete description from
      the Annotation line (>>) will be used [fjossandon]
    * GenericHSP: Added '.' to gap symbols in "_pre_gaps" (except for ERPIN),
      since it is now used by HMMER3 format in alignments [fjossandon]
    * GenericHit: Changed "frac_aligned_query" and "frac_aligned_hit"
      to return undef if the query/hit length is unknown (like in some
      HMMER outputs), to avoid division by 0 crashes. Also "query_length"
      now is set to 0 if its undefined, to be consistent with hit "length" [fjossandon]
    * HMMER: fixed many bugs in the parsing of Hmmer2 and Hmmer3 outputs,
      added support to multi-query reports, reduced code redundancy,
      and eliminated the automatic removal of hits below "inclusion threshold" [fjossandon]
    * [3369] - Fixed reported bugs in parse from HMMSEARCH3 reports [fjossandon]
    * [3446] - Fixed wrong marker position in Bio::Map::Physical [fjossandon]
    * [3455] - Fixed wrong print of DBLink in Genbank file [bosborne]
    * Fixed some Bio::Root::Utilities subroutines [fjossandon]
    * Double-quotes on paths are needed in some places [fjossandon]
    * [3453] - Allow multiple homologies and products in Entrezgene [fjossandon]